[gd_scene load_steps=2 format=3 uid="uid://c3vxm4oqy8bko"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="RootPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="RootPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="RootPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="RootPanel/Margin/VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Coins: 0"

[node name="SyncButton" type="Button" parent="RootPanel/Margin/VBox/TopBar"]
layout_mode = 2
text = "Sync"

[node name="LogoutButton" type="Button" parent="RootPanel/Margin/VBox/TopBar"]
layout_mode = 2
text = "Logout"

[node name="HSeparator" type="HSeparator" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="RootPanel/Margin/VBox"]
layout_mode = 2
columns = 2

[node name="WaterText" type="Label" parent="RootPanel/Margin/VBox/InventoryGrid"]
layout_mode = 2
text = "Wasser:"

[node name="WaterValue" type="Label" parent="RootPanel/Margin/VBox/InventoryGrid"]
layout_mode = 2
text = "0"

[node name="WoodText" type="Label" parent="RootPanel/Margin/VBox/InventoryGrid"]
layout_mode = 2
text = "Holz:"

[node name="WoodValue" type="Label" parent="RootPanel/Margin/VBox/InventoryGrid"]
layout_mode = 2
text = "0"

[node name="StoneText" type="Label" parent="RootPanel/Margin/VBox/InventoryGrid"]
layout_mode = 2
text = "Stein:"

[node name="StoneValue" type="Label" parent="RootPanel/Margin/VBox/InventoryGrid"]
layout_mode = 2
text = "0"

[node name="HSeparator2" type="HSeparator" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="BuildTitle" type="Label" parent="RootPanel/Margin/VBox"]
layout_mode = 2
text = "Gebäude bauen"

[node name="BuildButtons" type="HBoxContainer" parent="RootPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BuildWellButton" type="Button" parent="RootPanel/Margin/VBox/BuildButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brunnen bauen (10c+10w+20s)"

[node name="BuildLumberButton" type="Button" parent="RootPanel/Margin/VBox/BuildButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Holzfäller bauen (10c+10w)"

[node name="BuildStoneButton" type="Button" parent="RootPanel/Margin/VBox/BuildButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Steinmetz bauen (10c+10w)"

[node name="HSeparator5" type="HSeparator" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="ProductionTitle" type="Label" parent="RootPanel/Margin/VBox"]
layout_mode = 2
text = "Produktion"

[node name="Production" type="VBoxContainer" parent="RootPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WellProduction" type="HBoxContainer" parent="RootPanel/Margin/VBox/Production"]
layout_mode = 2

[node name="Label" type="Label" parent="RootPanel/Margin/VBox/Production/WellProduction"]
layout_mode = 2
text = "Brunnen:"

[node name="WellSlider" type="HSlider" parent="RootPanel/Margin/VBox/Production/WellProduction"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
value = 1.0

[node name="WellQtyLabel" type="Label" parent="RootPanel/Margin/VBox/Production/WellProduction"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "1"

[node name="WellProduceButton" type="Button" parent="RootPanel/Margin/VBox/Production/WellProduction"]
layout_mode = 2
text = "Wasser produzieren"

[node name="LumberProduction" type="HBoxContainer" parent="RootPanel/Margin/VBox/Production"]
layout_mode = 2

[node name="Label" type="Label" parent="RootPanel/Margin/VBox/Production/LumberProduction"]
layout_mode = 2
text = "Holzfäller:"

[node name="LumberSlider" type="HSlider" parent="RootPanel/Margin/VBox/Production/LumberProduction"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
value = 1.0

[node name="LumberQtyLabel" type="Label" parent="RootPanel/Margin/VBox/Production/LumberProduction"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "1"

[node name="LumberProduceButton" type="Button" parent="RootPanel/Margin/VBox/Production/LumberProduction"]
layout_mode = 2
text = "Holz produzieren"

[node name="StoneProduction" type="HBoxContainer" parent="RootPanel/Margin/VBox/Production"]
layout_mode = 2

[node name="Label" type="Label" parent="RootPanel/Margin/VBox/Production/StoneProduction"]
layout_mode = 2
text = "Steinmetz:"

[node name="StoneSlider" type="HSlider" parent="RootPanel/Margin/VBox/Production/StoneProduction"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
value = 1.0

[node name="StoneQtyLabel" type="Label" parent="RootPanel/Margin/VBox/Production/StoneProduction"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "1"

[node name="StoneProduceButton" type="Button" parent="RootPanel/Margin/VBox/Production/StoneProduction"]
layout_mode = 2
text = "Stein produzieren"

[node name="HSeparator6" type="HSeparator" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="BuildingsTitle" type="Label" parent="RootPanel/Margin/VBox"]
layout_mode = 2
text = "Gebäude"

[node name="BuildingButtons" type="HBoxContainer" parent="RootPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UpgradeWellButton" type="Button" parent="RootPanel/Margin/VBox/BuildingButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brunnen upgraden"

[node name="UpgradeLumberButton" type="Button" parent="RootPanel/Margin/VBox/BuildingButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Holzfäller upgraden"

[node name="UpgradeStoneButton" type="Button" parent="RootPanel/Margin/VBox/BuildingButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Steinmetz upgraden"

[node name="HSeparator3" type="HSeparator" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="SellTitle" type="Label" parent="RootPanel/Margin/VBox"]
layout_mode = 2
text = "Fixverkauf (NPC-Markt)"

[node name="SellButtons" type="HBoxContainer" parent="RootPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SellWater10" type="Button" parent="RootPanel/Margin/VBox/SellButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wasser x10 verkaufen"

[node name="SellWood10" type="Button" parent="RootPanel/Margin/VBox/SellButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Holz x10 verkaufen"

[node name="SellStone10" type="Button" parent="RootPanel/Margin/VBox/SellButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stein x10 verkaufen"

[node name="HSeparator4" type="HSeparator" parent="RootPanel/Margin/VBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="RootPanel/Margin/VBox"]
layout_mode = 2
text = ""
